--- a/templates/date.html
+++ b/templates/date.html
@@ -15,6 +15,12 @@
         <input type="text" name="date"/>
         Ex:2017-01-25
     </div>
+        <div>
+        text Cond1:
+        <input type="text" name="stext"/>
+           Text cond 2 <input type="text" name="s1text"/>
+        Ex: if cond 1 and cond 2 true 
+    </div>
 
     <div>
         <button type="submit">Send date</button>
