--- a/templates/date.html
+++ b/templates/date.html
@@ -19,11 +19,11 @@
         text Cond1:
         <input type="text" name="stext"/>
            Text cond 2 <input type="text" name="s1text"/>
-        Ex: if cond 1 and cond 2 true 
+        Ex: if cond 1 and cond 2 true
     </div>
 
     <div>
-        <button type="submit">Send date</button>
+        <button type="submit">Send</button>
 
 
         <button onclick="goBack()">Go Back</button>
