--- a/templates/results.html
+++ b/templates/results.html
@@ -8,7 +8,7 @@
         Your Bikes from the selected date {{user_date}}!
     </div>
     <form action="/olx">
-    <input type="submit" value="go to Date page" />
+    <input type="submit" value="go to Search page" />
 </form>
 {% for bikes in Bikes |sort(attribute='Date', reverse = True)%}
 
